# boris

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  COPYING.txt  DESIGN.md  Dockerfile  Doxyfile  GNUmakefile  Jamfile  LICENSE  LICENSE.md  Makefile  OLD.md  README.md  TODO  base64.c  base64.h  boris.c  boris.cfg  boris.h  boris.mk  channel.c  character.c  civetweb.mk  config.c  config.h  daemonize.mk  debug.h  eventlog.c  eventlog.h  example.c  fdbfile.c  index.html  invalidlogin.txt  ip-blocking.md  libbcrypt.mk  linux-gcc.config  (+26 more)
WIP/: authserver.mk
WIP/event/: ev.c  ev.h
WIP/filter/: filter.txt
WIP/mq/: mq.md
channel/: channel.c  channel.h
character/: character.c  character.h
crypt/: base64.c  base64.h  sha1.c  sha1crypt.c  sha1crypt.h
data/help/: help
data/text/: welcome.txt
experiment-feb2021.02.12/: Dockerfile  Makefile  main.c  mud  notes.txt  server.c  server.h
experiment-feb2021.02.14/: .gitignore  .travis.yml  Makefile  README.md  darwin-gcc.config  docker-compose.yaml  linux-gcc.config  notes.txt  util.mk  webserver.mk
experiment-feb2021.02.14/common/: config.h
experiment-feb2021.02.14/util/: example1.c  example2.c
experiment-feb2021.02.14/webserver/: webserver.c
fdb/: fdb.h  fdbfile.c
homepage/: index.html
include/: boris.h  command.h  config.h  debug.h  freelist.h  list.h  mud.h  mudconfig.h  plugin.h  telnetclient.h  terminal.h
log/: CMakeLists.txt  debug.h  eventlog.c  log.c  log.h  logging.c  logging.h
moon/: moon.c  moon.h
passwd/: CMakeLists.txt  mkpass.c
room/: room.c  room.h
roomdraw/: TODO  a.out  roomdraw.c  roomdraw.h
scripts/: passwd.pl  release-tar
scrypt/: do-make  memlimit.c  scryptenc.c  test_scrypt.c
server/: acs.c  boris.c  buf.c  buf.h  common.c  config.c  form.c  form.h  freelist.c  game.c  login.c  main.c  menu.c  menu.h  server.c  server.h  telnetclient.c  user.c  user.h
session/: env.c  env.h
src/: CMakeLists.txt  acs.h  boris.c  boris.h  buf.c  common.c  config.c  fds.c  form.c  form.h  freelist.c  freelist.h  game.h  login.h  menu.h  mud.h  mudconfig.h  telnetclient.c  telnetclient.h  user.c
src/channel/: channel.c
src/character/: character.c
src/crypt/: base64.h  sha1.c  sha1.h  sha1crypt.c
src/help/: CMakeLists.txt  help.c  help.h
src/log/: CMakeLists.txt  eventlog.c
src/passwd/: CMakeLists.txt  passwd.c  passwd.h
src/scrypt/: CMakeLists.txt  crypto_aes.c  crypto_aesctr.c  crypto_entropy.c  crypto_scrypt.c  humansize.c  scrypt.mk  scryptenc.c  sha256.c  test_scrypt
src/stackvm/: .gitignore
src/stackvm/kernel/: README.md  kernel.c  prioq.c  syscalls.asm  test2.c
src/stackvm/tests/: demovm.c  ex1.c  ex2_syscalls.h  ex3.c
src/task/: command.c  comutil.c  comutil.h
src/tests/: CMakeLists.txt  test_lws.c
src/util/: CMakeLists.txt
src/web/: CMakeLists.txt
src/web/client/: index.html
src/web/client/assets/: layout.css  system.css
src/web/client/js/: main.js  socket.js
src/web/server/: lws_evlib_dyad.c  lws_evlib_dyad.h  webserver.c  webserver.h
src/worldclock/: worldclock.c  worldclock.h
stackvm/: .gitignore  .gitmodules  Makefile  README.md  README.txt  demovm.c  ex2.c  ex2_syscalls.asm  ex2_syscalls.h  hello.vm  hexdump.c  hexdump.h  math.vm  stackdump.c  stackdump.h  stackvm.c  stackvm.h  stackvm.txt  token.vm
stackvm/kernel/: Makefile  hello.c  kernel.c  prioq.c  prioq.h  prioq_test.c  task.c  task.h
stackvm/tests/: Makefile  demovm.c  ex2.c  ex3.c
task/: command.c  comutil.c  comutil.h
util/: CMakeLists.txt  base64.c  base64.h  base64_main.c  darray.h  dynstr.h  grow.c  grow.h  llist.h  toolkit.c  toolkit.h  util.c  util.h  vec.h
webserver/: server.c
worldclock/: worldclock.c
